--- a/my-proyect/src/app/components/login/login.component.html
+++ b/my-proyect/src/app/components/login/login.component.html
@@ -1,7 +1,8 @@
 <div class="login-container">
-  <h2>Iniciar Sesión</h2>
 
   <form [formGroup]="loginForm" (ngSubmit)="login()" class="login-form">
+
+    <h2 class="title">Iniciar Sesión</h2>
 
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Usuario</mat-label>
